--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
-    "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix\n"
+    "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix\n",
+    "lint:scss": "stylelint \"**/*.scss\"\n",
+    "lint:scss:fix": "stylelint \"**/*.scss\" --fix\n"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,8 @@
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "stylelint": "^14.5.3",
+    "stylelint-config-standard-scss": "^3.0.0",
     "@svgr/webpack": "^6.2.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
