--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix\n",
     "lint:scss": "stylelint \"**/*.scss\"\n",
-    "lint:scss:fix": "stylelint \"**/*.scss\" --fix\n"
+    "lint:scss:fix": "stylelint \"**/*.scss\" --fix\n",
+    "unit": "jest --config ./config/jest/jest.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,10 +19,12 @@
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "stylelint": "^14.5.3",
     "stylelint-config-standard-scss": "^3.0.0",
     "@svgr/webpack": "^6.2.1",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -54,7 +57,8 @@
     "typescript": "^4.9.5",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "jest": "^27.5.1"
   },
   "dependencies": {
     "i18next": "^21.6.11",
