--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: install modules
         run: npm install
-      - name: build productio project
+      - name: build production project
         run: npm run build:prod
       - name: linting script
         run: npm run lint:ts
