--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,46 +1,46 @@
-name: Linting, testing and building
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-jobs:
-  pipeline:
-    runs-on: macos-latest
-    strategy:
-      matrix:
-        node-version: [20.x]
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Staring Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: install modules
-        run: npm install
-
-      - name: build production project
-        run: npm run build:prod
-        if: always()
-
-      - name: linting script
-        run: npm run lint:ts
-        if: always()
-
-      - name: linting css
-        run: npm run lint:scss
-        if: always()
-
-      - name: unit testing
-        run: npm run test:unit
-        if: always()
-
-      - name: build storybook
-        run: npm run storybook:build
-        if: always()
-
-      - name: screenshot testing
-        run: npm run test:ui:ci
-        if: always()
+#name: Linting, testing and building
+#run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+#on:
+#  push:
+#    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
+#jobs:
+#  pipeline:
+#    runs-on: macos-latest
+#    strategy:
+#      matrix:
+#        node-version: [20.x]
+#
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Staring Node.js ${{ matrix.node-version }}
+#        uses: actions/setup-node@v1
+#        with:
+#          node-version: ${{ matrix.node-version }}
+#      - name: install modules
+#        run: npm install
+#
+#      - name: build production project
+#        run: npm run build:prod
+#        if: always()
+#
+#      - name: linting script
+#        run: npm run lint:ts
+#        if: always()
+#
+#      - name: linting css
+#        run: npm run lint:scss
+#        if: always()
+#
+#      - name: unit testing
+#        run: npm run test:unit
+#        if: always()
+#
+#      - name: build storybook
+#        run: npm run storybook:build
+#        if: always()
+#
+#      - name: screenshot testing
+#        run: npm run test:ui:ci
+#        if: always()
