Add comment list

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,8 @@
     "./config/jest/setupTests.ts",
     "./src/**/*.ts",
     "./src/**/*.tsx"
+  ],
+  "exclude": [
+    "./src/**/*.stories.tsx" // для того, чтобы не ругался на незаполненные сторис при создании компонентов
   ]
 }
