--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack serve --env port=3000",
     "start:dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
     "start:dev:server": "node ./json-server/index.js",
-    "build:prod": "webpack --env mode=production",
+    "build:prod": "webpack --env mode=production apiUrl=https://ulbi-project-server-4wwbvp7z3-maksims-projects-c4aeec5a.vercel.app",
     "build:dev": "webpack --env mode=development",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix\n",
@@ -55,6 +55,7 @@
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "^0.8.3",
+    "copy-webpack-plugin": "10.2.4",
     "concurrently": "^7.0.0",
     "css-loader": "^6.6.0",
     "eslint": "^8.56.0",
