--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "^0.8.3",
-    "copy-webpack-plugin": "10.2.4",
     "concurrently": "^7.0.0",
+    "copy-webpack-plugin": "10.2.4",
     "css-loader": "^6.6.0",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -65,6 +65,7 @@
     "eslint-plugin-i18next": "^5.1.2",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-maksim-plugin": "^0.0.5",
     "eslint-plugin-n": "^16.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
